Add personal profile page and project details to README and create project.html

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <header>
         <h1>Vaibhav Dadhich</h1>
     </header>
-    <!--this is the navigation bar of the website-->
+    <!-- Navigation bar section -->
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <!--this is the main content of the website-->
+    <!--main content section-->
     <main>
         <article>
             <h2>About Me</h2>
@@ -31,7 +31,7 @@
             <p>Full stack development allows me to work on both the front-end and back-end, giving me a comprehensive understanding of how web applications function and enabling me to create complete solutions.</p>
         </article>
     </main>
-    <!--this is the aside section of the website-->
+    <!--aside section for additional information-->
     <aside>
         <h3>Skills I Want to Learn</h3>
         <ul>
@@ -40,7 +40,7 @@
             <li>Node.js</li>
         </ul>
     </aside>
-    <!--this is the footer section of the website-->
+    <!--footer section for copyright and additional links-->
     <footer>
         <p>© Vaibhav Dadhich, 2025</p>
     </footer>
